added proper slideup for the menu boxes.. I like this. Should show this to harshi tomorrow, hope she likes it too.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@ $(function(){
 	);
 	
 	$(".box").click(function(){
-		$("#sidepanel").slideUp();
+		//$("#sidepanel").slideUp();
+		$(".test").not($(this).parent()).slideUp();
 	});
 	
 	
 	$("#home").click(function(){
-		$("#sidepanel").slideDown();
+		$(".test").slideDown();
 	});
 });
 </script>
