modified the title class elements..

--- a/index.html
+++ b/index.html
@@ -42,28 +42,28 @@ $(function(){
 			<div class="box">
 				<img src="imgs/pencil.png" alt="" >
 			</div>
-			<div class="title">Home</div>
+			<div class="title"><span>Home</span></div>
 		</div>
 		
 		<div class="test">
 			<div class="box">
 				<img src="imgs/icon.png" alt="" >
 			</div>
-			<div class="title">About</div>
+			<div class="title"><span>About</span></div>
 		</div>
 
 		<div class="test">
 			<div class="box">
 				<img src="imgs/pencil.png" alt="" >
 			</div>
-			<div class="title">Home</div>
+			<div class="title"><span>Home</span></div>
 		</div>
 		
 		<div class="test">
 			<div class="box">
 				<img src="imgs/icon.png" alt="" >
 			</div>
-			<div class="title">About</div>
+			<div class="title"><span>About</span></div>
 		</div>
 	</div>
 	<button id="home">Home</button>
