--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ $(function(){
 
 </head>
 <body>
+	<button id="home">Home</button>
 	<div id="sidepanel">
 
 		<div class="test">
@@ -66,6 +67,8 @@ $(function(){
 			<div class="title"><span>About</span></div>
 		</div>
 	</div>
-	<button id="home">Home</button>
+	<div id="content">
+		Welcome
+	</div> 
 </body>
 </html>
